# Whetstone_OS

./: .gitmodules  .travis.yml  COPYING  Cargo.toml  Makefile  OVMF_CODE.fd  README.md  main.c  x86_64-unknown-whetstone.json
boot/: Makefile
loader/: Cargo.toml  Xargo.toml  loader.rs  x86_64-uefi.json
loader/src/: main.rs
scripts/: travis.sh
src/: lib.rs
