[package]
name = "uefi_loader"
version = "0.1.0"
authors = ["orumin <dev@orum.in>"]

[lib]
path = "loader.rs"
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"

[dependencies.uefi]
path = "../external/uefi"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
