cargo-features = ["edition"]

[package]
name = "uefi_loader"
version = "0.1.0"
authors = ["orumin <dev@orum.in>"]

[dependencies]
uefi = { path = "../external/uefi-rs/" }
uefi-services = { path = "../external/uefi-rs/uefi-services" }
uefi-exts = { path = "../external/uefi-rs/uefi-exts" }

log = { version = "0.4", default-features = false }
